--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -3,7 +3,6 @@ html, body {
   margin: 0;
   padding: 0;
 }
-
 .save-note {
   display: none;
 }
@@ -24,8 +23,8 @@ html, body {
 
 .note-textarea {
   resize: none;
-  height: calc(100% - 63px);
-  padding-top: 15px;
+  /* height: calc(100% - 63px); */
+  /* padding-top: 15px; */
 }
 
 .note-title {
@@ -66,5 +65,6 @@ html, body {
   border-left: none;
   border-right: none;
   padding: 20px;
+  margin-right: 5px;
   cursor: pointer;
 }
