--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -28,9 +28,9 @@ html, body {
 }
 
 .note-title {
-  height: 50px;
+  /* height: 50px; */
   margin-top: 13px;
-  font-size: 3rem;
+  font-size: 50px;
 }
 
 .note-title:read-only, .note-textarea:read-only {
