--- a/public/assets/css/index.css
+++ b/public/assets/css/index.css
@@ -6,6 +6,7 @@ body {
 }
 .jumbotron{
     margin-top: 165px; 
+    margin-bottom: 130px;
     background-color: rgba(252, 228, 228, 0.712); 
     width: 100%; 
     height: 400px!important;
@@ -34,4 +35,12 @@ h3 {
 }
 img {
     width: 10%;
+}
+@media screen and (max-width: 1024px){
+    .jumbotron {
+        margin-top: 120px;
+    }
+    h1 {
+        margin-top: 0;
+    }
 }
