--- a/public/assets/css/index.css
+++ b/public/assets/css/index.css
@@ -1,45 +1,45 @@
 body {
-    background-image: url("../images/background.jpg")!important;
-    background-size: cover;
-    background-repeat: no-repeat;
+  background-image: url("../images/background.jpg") !important;
+  background-size: cover;
+  background-repeat: no-repeat;
 }
-.jumbotron{
-    margin-top: 165px; 
-    margin-bottom: 130px;
-    background-color: rgba(252, 228, 228, 0.712); 
-    width: 100%; 
-    height: 400px!important;
+.jumbotron {
+  margin-top: 165px;
+  margin-bottom: 130px;
+  background-color: rgba(252, 228, 228, 0.712);
+  width: 100%;
+  height: 400px !important;
 }
 .navbar {
-    background-color: transparent!important;
-    padding: 1%;
+  background-color: transparent !important;
+  padding: 1%;
 }
 .navText {
-    color: rgb(241, 108, 108)!important;
-    font-family: 'Yesteryear', cursive;
-    font-size: 45px;
-    padding-bottom: 0;
+  color: rgb(241, 108, 108) !important;
+  font-family: "Yesteryear", cursive;
+  font-size: 45px;
+  padding-bottom: 0;
 }
 h1 {
-    color: rgb(236, 57, 57)!important;
-    font-family: 'Lobster', cursive;
-    font-size: 75px!important;
-    margin-top: 30px;
+  color: rgb(236, 57, 57) !important;
+  font-family: "Lobster", cursive;
+  font-size: 75px !important;
+  margin-top: 30px;
 }
 h3 {
-    font-weight: bold;
-    color: red;
-    font-family: 'Mukta', sans-serif;
-    font-size: 30px;
+  font-weight: bold;
+  color: red;
+  font-family: "Mukta", sans-serif;
+  font-size: 30px;
 }
 img {
-    width: 10%;
+  width: 10%;
 }
-@media screen and (max-width: 1024px){
-    .jumbotron {
-        margin-top: 120px;
-    }
-    h1 {
-        margin-top: 0;
-    }
+@media screen and (max-width: 1024px) {
+  .jumbotron {
+    margin-top: 120px;
+  }
+  h1 {
+    margin-top: 0;
+  }
 }
