--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -1,4 +1,5 @@
-html, body {
+html,
+body {
   height: 100%;
   margin: 0;
   padding: 0;
@@ -6,49 +7,40 @@ html, body {
 .save-note {
   display: none;
 }
-
 .icons i {
   margin-left: 15px;
   margin-right: 15px;
   font-size: 1.5rem;
   cursor: pointer;
 }
-
-.note-textarea, .note-title {
+.note-textarea,
+.note-title {
   color: #000000;
   width: 100%;
   outline: none;
   border: none;
-  font-family: 'Mukta', sans-serif;
+  font-family: "Mukta", sans-serif;
 }
-
 .note-textarea {
   resize: none;
-  /* height: calc(100% - 63px); */
-  /* padding-top: 15px; */
 }
-
 .note-title {
-  /* height: 50px; */
   margin-top: 13px;
   font-size: 35px;
 }
-
-.note-title:read-only, .note-textarea:read-only {
+.note-title:read-only,
+.note-textarea:read-only {
   color: #757575;
 }
-
 .list-container .card {
   height: calc(100vh - 70px);
   border-bottom: none;
   border-bottom-right-radius: 0;
   border-bottom-left-radius: 0;
 }
-
 .list-container {
   padding-left: 0;
 }
-
 .list-container .list-group,
 .list-container .list-group-item:first-child,
 .list-container .card {
@@ -56,17 +48,15 @@ html, body {
   border-top-right-radius: 0;
   border-top-left-radius: 0;
 }
-
 .list-container i {
   font-size: 1.1rem;
   cursor: pointer;
 }
-
 .list-container .list-group-item {
   border-left: none;
   border-right: none;
   padding: 20px;
   margin-right: 5px;
   cursor: pointer;
-  font-family: 'Mukta', sans-serif;
+  font-family: "Mukta", sans-serif;
 }
